Fixed blog images, improved post and fixed navbar covering anchor tag issue.

--- a/source/stylesheets/_theme.scss
+++ b/source/stylesheets/_theme.scss
@@ -140,6 +140,12 @@ address {
 	font-family: $font-family-monospace;
 }
 
-div.blog img {
-	@extend .img-responsive;
+div.blog {
+	img {
+		@extend .img-responsive;
+	}
+	table {
+		@extend .table;
+		width: auto;
+	}
 }
